outputs/main/reevo_bpp_online_2025-07-26_00-26-25/problem_iter1_response20.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/eval.py", line 9, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 28
    self.keywordArgs = ["keywordMonitoring", tenantId]
    ^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
12
4
